welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: missing arguments for method golomb in class golomb;
follow this method with `_' if you want to treat it as a partially applied function
 golomb(1) = r
 ^golomb:7: error: type mismatch;
 found   : Unit
 required: Int
 r=r+1
  ^golomb:6: error: type mismatch;
 found   : Unit
 required: Int
if (r == n) {
^