welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
 var r = 1 
 var n = 1 
 golomb(1) = r

if (r == n) {
 r=r+1
}


}
